# python-ppl

./: .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  pyproject.toml
examples/contacts/: Alice Johnson.vcf  Bob Smith.vcf  Charlie Davis.vcf
ppl/: __init__.py  cli.py
ppl/filters/: __init__.py  gender_filter.py  uid_filter.py
ppl/models/: __init__.py  contact.py  filter.py  graph.py  pipeline.py  relationship.py
ppl/serializers/: __init__.py  markdown.py  vcard.py  yaml_serializer.py
ppl/services/: __init__.py  consistency.py
project/: Architecture.md  CurationPlan.md  CurationWorkflow.md  IMPLEMENTATION_SUMMARY.md  Implementation.md  NextSteps.md  PRD.md  Specs.md  UserStories.md
tests/: test_cli.py  test_consistency.py  test_contact.py  test_contact_merge.py  test_curation_workflow.py  test_export_changes.py  test_filters.py  test_graph.py  test_graph_merge.py  test_graph_persistence.py  test_integration.py  test_json_graph.py  test_json_graph_integration.py  test_markdown.py  test_relationship.py  test_vcard.py  test_yaml.py
