[project]
name = "ppl"
version = "0.1.0"
description = "Python PPL project"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Ian Dennis Miller" }
]
dependencies = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ppl"]

[tool.setuptools.package-data]
ppl = ["py.typed"]
